--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,25 +7,25 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.6.4", optional = true }
+axum = { version = "0.7.0", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 cfg-if = "1"
-leptos = { version = "0.4", features = ["nightly"] }
-leptos_axum = { version = "0.4", optional = true }
-leptos_meta = { version = "0.4", features = ["nightly"] }
-leptos_router = { version = "0.4", features = ["nightly"] }
+leptos = { version = "0.6.15", features = ["nightly"] }
+leptos_axum = { version = "0.6.15", optional = true }
+leptos_meta = { version = "0.6.15", features = ["nightly"] }
+leptos_router = { version = "0.6.15", features = ["nightly"] }
 log = "0.4"
-simple_logger = "4"
-tokio = { version = "1.25.0", optional = true }
-tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = ["fs"], optional = true }
-wasm-bindgen = "0.2.88"
-thiserror = "1.0.38"
-tracing = { version = "0.1.37", optional = true }
-http = "0.2.8"
+simple_logger = "5.0.0"
+tokio = { version = "1.25.0", features = ["rt-multi-thread"],optional = true }
+tower = { version = "0.5.1", optional = true, features = ["util"]}
+tower-http = { version = "0.6.2", features = ["fs"], optional = true }
+wasm-bindgen = "=0.2.95"
+thiserror = "2.0.3"
+tracing = { version = "0.1.0", optional = true }
+http = "1.1.0"
 gray_matter = "0.2.6"
-pulldown-cmark = "0.9.3"
+pulldown-cmark = "0.12.2"
 serde = { version = "1.0.163", features = ["derive"] }
 chrono = { version = "0.4.24", features = ["serde"] }
 
