--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "preline": "^1.9.0",
-    "tailwindcss": "^3.4.3"
+    "@tailwindcss/typography": "0.5.15",
+    "preline": "2.5.1",
+    "tailwindcss": "3.4.15"
   }
 }
