--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.15",
-    "preline": "2.5.1",
-    "tailwindcss": "3.4.15"
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.15",
+    "preline": "^2.7.0",
+    "tailwindcss": "^3.4.15"
   }
 }
