--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ gray_matter = "0.2.6"
 pulldown-cmark = "0.12.2"
 serde = { version = "1.0.163", features = ["derive"] }
 chrono = { version = "0.4.24", features = ["serde"] }
+rand = "=0.9.0"
+getrandom = { version = "=0.3", features = ["wasm_js"] } # NEW
+#For random
+[target.wasm32-unknown-unknown]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
