--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -18,7 +18,7 @@ jobs:
           echo "LAST_UPDATED=$FORMATTED" >> $GITHUB_ENV
 
       - name: Deploy Website 
-      - run: flyctl deploy --remote-only --build-arg LAST_UPDATED="$LAST_UPDATED"
+        run: flyctl deploy --remote-only --build-arg LAST_UPDATED="$LAST_UPDATED"
 
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
