--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ simple_logger = "5.0.0"
 tokio = { version = "1.25.0", features = ["rt-multi-thread"],optional = true }
 tower = { version = "0.5.1", optional = true, features = ["util"]}
 tower-http = { version = "0.6.2", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.100"
+wasm-bindgen = "=0.2.95"
 thiserror = "=1.0.38"
 tracing = { version = "0.1.0", optional = true }
 http = "1.1.0"
@@ -28,11 +28,9 @@ gray_matter = "0.2.6"
 pulldown-cmark = "0.12.2"
 serde = { version = "1.0.163", features = ["derive"] }
 chrono = { version = "0.4.24", features = ["serde"] }
-rand = "=0.9.0"
-getrandom = { version = "=0.3", features = ["wasm_js"] } # NEW
-#For random
-[target.wasm32-unknown-unknown]
-rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
+rand = "0.8.5"
+getrandom = { version = "0.2.15", features = ["js"] }
+
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
