--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1.25.0", features = ["rt-multi-thread"],optional = true }
 tower = { version = "0.5.1", optional = true, features = ["util"]}
 tower-http = { version = "0.6.2", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.95"
+web-sys = { version = "=0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomRect", "Performance"] }
 thiserror = "=1.0.38"
 tracing = { version = "0.1.0", optional = true }
 http = "1.1.0"
